# adventofcode2023

./: .pre-commit-config.yaml  README.md  pyproject.toml
1/: day1.py
10/: day10.py
11/: day11.py
12/: day12.py  last.txt  test2.txt  test3.txt
13/: day13.py  horizontal_test.txt  vertical_test.txt
14/: day14.py
15/: day15.py
16/: day16.py
18/: day18a.py  day18b.py  simple.txt
19/: day19.py
2/: day2-p2.py  day2.py  day2.rs
21/: day21.py
23/: day23.py  day23b.py
24/: day24.py
3/: day3a.py  day3b.py
4/: day4-p2.py  day4.py
5/: day5a.py  day5b.py
6/: day6a.py  day6b.py
7/: day7.py  day7a.py  day7b.py
8/: day8.py
9/: day9.py
