[tool.poetry]
name = "adventofcode2023"
version = "1.0"
description = ""
authors = ["Ramanan Sivaranjan <ramanan@funkaoshi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
